src/components/PlayersTable/_playersTable.scss
$table-color-primary: #efefef;
$table-color-secondary: lighten($navbar-secondary-color, 50%);
$winloss-loss-color: $navbar-primary-color;
$winloss-win-color: $navbar-secondary-color;
$winloss-font-color: lighten($navbar-secondary-color, 50%);

#player-table-cntr-outer {
	width: calc(100% - 40px);
	padding: 20px;
	
	.player-table-title {
		width: 100%;
		font-family: $primary-font;
		font-size: 30px;
		padding-bottom: 5px;
	}

	#player-table-cntr-inner {
		position: relative;
		font-family: $secondary-font;
		font-size: 16px;
		padding-top: 34px;
		
		.player-table-row,
		#player-table-header {
			width: calc(100% - 20px);
			height: 19px;
			padding: 10px;
			padding-top: 11px;
			overflow: hidden;
			
			.rank, .name, .elo, .winloss {
				display: inline-block;
				text-align: center;
				margin-right: 20px;
			}
			
			.rank {
				width: 40px;
			}
			
			.name {
				width: 115px;
				text-align: left;
				white-space: nowrap;
				text-overflow: ellipsis;
				overflow: hidden;
				vertical-align: bottom;
			}
			
			.elo {
				width: 40px;
			}
			
			.winloss {
				width: 134px;
				margin: 0;
			}
		}
		
		.player-table-row {
			.winloss {
				position: relative;
				vertical-align: top;
				width: 124px;
				margin: 0;
				font-size: 12px;
				font-weight: bold;
				
				.winloss-bar {
					position: absolute;
					width: calc(100% - 40px);
					height: 24px;
					top: -3px;
					background-color: $winloss-loss-color;
					border: solid 1px $outline-color;
					border-radius: 3px;
					overflow: hidden;
					color: $winloss-font-color;
					
					.txt {
						position: absolute;
						font-size: 12px;
						right: 4px;
						top: 5px;
						text-align: right;
					}
					
					.win-bar {
						position: absolute;
						width: 50%;
						height: 100%;
						overflow: hidden;
						top: 0px;
						background-color: $winloss-win-color;
						
						.txt {
							left: 4px;
							right: 0;
							text-align: left;
						}
					}
				}
				
				.winloss-rate {
					position: absolute;
					right: -11px;
					top: 4px;
					text-align: center;
					width: 40px;
				}
			}
		}
		
		.player-table-row {
			background-color: $table-color-primary;
			
			&.alt {
				background-color: $table-color-secondary;
			}
		}
		
		#player-table-header {
			position: absolute;
			top: 0;
			font-family: $primary-font;
			background-color: $primary-color-layout;
			border-bottom: solid 2px $outline-color;
			padding-bottom: 2px;
		}
	}
}

